cnm/k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cnm-dev-strip-prefix
  namespace: cnm-dev
spec:
  stripPrefix:
    prefixes:
      - /dev/cnm
