cnm/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnm-api
  namespace: cnm-dev
  labels:
    app: cnm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnm-api
  template:
    metadata:
      labels:
        app: cnm-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: cnm-api
          image: doaneu/cnm-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
