cnm/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnm-api
  namespace: cnm-dev
spec:
  selector:
    app: cnm-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cnm-frontend
  namespace: cnm-dev
spec:
  selector:
    app: cnm-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
