cnm/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnm-ingress
  namespace: cnm-dev
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: cnm-dev-cnm-dev-strip-prefix@kubernetescrd
    cert-manager.io/cluster-issuer: prod-letsencrypt
spec:
  tls:
    - hosts:
        - du-int.doane.edu
      secretName: wildcard-doane-tls
  rules:
    - host: du-int.doane.edu
      http:
        paths:
          - path: /dev/cnm
            pathType: Prefix
            backend:
              service:
                name: cnm-frontend
                port:
                  number: 80
          - path: /dev/cnm/api
            pathType: Prefix
            backend:
              service:
                name: cnm-api
                port:
                  number: 8080
